Update localized strings
and use pascal case for Dart class friendliness.

--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -1,3 +1,8 @@
 {
-  "app_name": "BLoC TODO"
+  "appName": "BLoC TODO",
+  "settings": "Settings",
+  "appCategory": "App",
+  "sourceCodeTitle": "Source code",
+  "buildVersionTitle": "Build version",
+  "buildVersionSubtitle": "Version: "
 }
