Update localized strings

--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -1,8 +1,33 @@
 {
-  "appName": "BLoC TODO",
+  "appName": "BLoC TO-DO",
+  "todoList": "TO-DO List",
+  "noTasks": "No TO-DOs.",
+  "todoListHeaderAll": "All TO-DOs",
+  "todoListHeaderActive": "Active TO-DOs",
+  "todoListHeaderCompleted": "Completed TO-DOs",
+  "todoListFilterAll": "All",
+  "todoListFilterActive": "Active",
+  "todoListFilterCompleted": "Completed",
+  "todoListSortBy": "Sort by",
+  "todoListClearCompleted": "Clear completed",
+  "todoListSortByTitle": "Title",
+  "todoListSortByCreatedDate": "Created Date",
+  "newTask": "New TO-DO",
+  "newTaskFailedToCreate": "Failed to create new TO-DO.",
+  "newTaskSuccessfulToCreate": "TO-DO created.",
+  "editTask": "Edit TO-DO",
+  "editTaskFailedToUpdate": "Failed to update TO-DO.",
+  "editTaskSuccessfulToUpdate": "TO-DO updated.",
+  "editTaskTitleLabel": "Title",
+  "editTaskTitleValidationError": "Title is required.",
+  "editTaskDescLabel": "Description",
+  "editTaskDescHint": "Enter your TO-DO here.",
+  "statistics": "Statistics",
+  "statisticsActiveTasks": "Active TO-DOs:",
+  "statisticsCompletedTasks": "Completed TO-DOs:",
   "settings": "Settings",
   "appCategory": "App",
   "sourceCodeTitle": "Source code",
   "buildVersionTitle": "Build version",
-  "buildVersionSubtitle": "Version: "
+  "buildVersionSubtitle": "Version: $version"
 }
